[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/BOOKOSB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Menu Button.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Pause Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Pause Menu" type="MarginContainer"]
light_mask = 524289
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 1294.0
margin_bottom = 550.0
custom_constants/separation = 400

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1194.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 448.0
margin_right = 1194.0
margin_bottom = 490.0
custom_constants/margin_right = 130
custom_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1064.0
margin_bottom = 42.0
custom_constants/separation = 50

[node name="Continue Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="Restart Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 315.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Restart"

[node name="Quit to Title Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 365.0
margin_right = 561.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Quit To Title"

[node name="Quit to Desktop Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 611.0
margin_right = 865.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Quit To Desktop"
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Continue Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Restart Button" to="." method="_on_Restart_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Quit to Title Button" to="." method="_on_Quit_to_Title_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Quit to Desktop Button" to="." method="_on_Quit_Button_pressed"]
